force-app/main/default/objects/smt_Summit_Section__c/smt_Summit_Section__c.object-meta.xml
<CustomObject>
    <label>Summit Section</label>
    <nameField>
        <label>Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Summit Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>