force-app/main/default/objects/smt_Summit_Section__c/fields/smt_No_Of_Particulars_Without_Condition__c.field-meta.xml
<CustomField>
    <fullName>smt_No_Of_Particulars_Without_Condition__c</fullName>
    <label>No Of Particulars Without Condition</label>
    <summaryForeignKey>smt_Summit_Particular__c.smt_Summit_Section__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>