force-app/main/default/objects/smt_Summit_Section__c/fields/smt_Number_Of_Particulars__c.field-meta.xml
<CustomField>
    <fullName>smt_Number_Of_Particulars__c</fullName>
    <label>Number Of Particulars</label>
    <summaryFilterItems>
        <field>smt_Summit_Particular__c.smt_Is_Particular_Considered__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>smt_Summit_Particular__c.smt_Summit_Section__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>