force-app/main/default/objects/smt_Summit_Section__c/fields/smt_Sum_Of_Percentage_Achieved__c.field-meta.xml
<CustomField>
    <fullName>smt_Sum_Of_Percentage_Achieved__c</fullName>
    <label>Sum Of Percentage Achieved</label>
    <summarizedField>smt_Summit_Particular__c.smt_Percentage_Achieved__c</summarizedField>
    <summaryFilterItems>
        <field>smt_Summit_Particular__c.smt_Is_Particular_Considered__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>smt_Summit_Particular__c.smt_Summit_Section__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>