force-app/main/default/objects/smt_Summit_Section__c/fields/smt_Summit_Tracker__c.field-meta.xml
<CustomField>
    <fullName>smt_Summit_Tracker__c</fullName>
    <label>Summit Tracker</label>
    <referenceTo>smt_Summit_Tracker__c</referenceTo>
    <relationshipLabel>Summit Sections</relationshipLabel>
    <relationshipName>Summit_Sections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>