force-app/main/default/objects/smt_Summit_Section__c/fields/smt_Target_Achieved__c.field-meta.xml
<CustomField>
    <fullName>smt_Target_Achieved__c</fullName>
    <formula>smt_Sum_Of_Percentage_Achieved__c /  smt_Number_Of_Particulars__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Achieved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>