force-app/main/default/objects/smt_Summit_Section__c/fields/smt_Target_Achieved_With_Weightage__c.field-meta.xml
<CustomField>
    <fullName>smt_Target_Achieved_With_Weightage__c</fullName>
    <label>Target Achieved With Weightage</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>