force-app/main/default/objects/smt_Summit_Section__c/fields/smt_Weightage__c.field-meta.xml
<CustomField>
    <fullName>smt_Weightage__c</fullName>
    <label>Weightage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>