force-app/main/default/objects/smt_Summit_Section__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>smt_Summit_Tracker__c</columns>
    <columns>smt_Weightage__c</columns>
    <columns>smt_Target_Achieved_With_Weightage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>